--- a/test/benchmark/stats.org
+++ b/test/benchmark/stats.org
@@ -10,28 +10,27 @@ wget ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/data/HG00100/alignment/HG00
 Processing an 841Mb BAM file.
 
 
-*** Penguin2
+*** Penguin2 56x Intel(R) Xeon(R) CPU E5-2683 v3 @ 2.00GHz, 256Gb
+
+Sambamba appears to be slightly faster between 0.8.1 and 0.8.2 thanks to ldc2 and LLVM updates.
 
 #+begin_src sh
 time ./sambamba-0.8.2 sort HG00100.chrom20.ILLUMINA.bwa.GBR.low_coverage.20130415.bam >
  /dev/null
 
-sambamba 0.8.2
- by Artem Tarasov and Pjotr Prins (C) 2012-2021
+sambamba 0.8.2 by Artem Tarasov and Pjotr Prins (C) 2012-2021
     LDC 1.27.1 / DMD v2.097.2 / LLVM11.0.0 / bootstrap LDC - the LLVM D compiler (1.27.1)
 
+real    0m18.636s
+user    3m47.704s
+sys     0m18.764s
 
-real    0m18.863s
-user    4m5.428s
-sys     0m20.552s
-
-sambamba 0.8.1
- by Artem Tarasov and Pjotr Prins (C) 2012-2021
+sambamba 0.8.1 by Artem Tarasov and Pjotr Prins (C) 2012-2021
     LDC 1.26.0 / DMD v2.096.1 / LLVM9.0.1 / bootstrap LDC - the LLVM D compiler (0.17.6)
 
-real    0m20.158s
-user    4m5.968s
-sys     0m20.212s
+real    0m19.045s
+user    3m50.088s
+sys     0m16.908s
 #+end_src
 
 *** AMD Ryzen 7 3700X 8-Core Processor
